--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			    position: relative; <br>
 			    top: 220px; <br>
 			    left: 60px; <br>
-			    -webkit-transform: rotate(-29deg); <br>
+			    rotate(-29deg); <br>
 			    z-index: 3; <br>
 	    	</div>
 			}
@@ -41,7 +41,7 @@
 			    position: relative; <br>
 			    top: 201px; <br>
 			    left: 75px; <br>
-			    -webkit-transform: rotate(-119deg); <br>
+			    rotate(-119deg); <br>
 			    z-index: 4; <br>
 
 			</div>
@@ -57,7 +57,7 @@
 			    position: relative; <br>
 			    top: 100px; <br>
 			    left: 58px; <br>
-			    -webkit-transform: rotate(24deg); <br>
+			    rotate(24deg); <br>
 			    z-index: 5; <br>
 			</div>
 			}
@@ -72,7 +72,7 @@
 			    position: relative; <br>
 			    top: 117px; <br>
 			    left: 208px; <br>
-			    -webkit-transform: rotate(24deg); <br>
+			    rotate(24deg); <br>
 			    z-index: 2; <br>
 			</div>
 			}
@@ -90,7 +90,7 @@
 			    z-index: 10; <br>
 			    top: 139px; <br>
 			    left: 41px; <br>
-			    -webkit-transform: rotate(11deg); <br>
+			    rotate(11deg); <br>
 			</div>
 			}
 			<br>
@@ -107,7 +107,7 @@
 			    top: 140px; <br>
 			    left: 50px; <br>
 			    z-index: 9; <br>
-			    -webkit-transform: rotate(11deg); <br>
+			    rotate(11deg); <br>
 			</div>
 			}
 			<br>
@@ -124,7 +124,7 @@
 			    top: 218px; <br>
 			    left: 220px; <br>
 			    z-index: 9; <br>
-			    -webkit-transform: rotate(11deg); <br>
+			    rotate(11deg); <br>
 			</div>
 			}
 			<br>
@@ -141,7 +141,7 @@
 			    top: 283px; <br>
 			    left: 354px; <br>
 			    z-index: 9; <br>
-			    -webkit-transform: rotate(11deg); <br>
+			    rotate(11deg); <br>
 			</div>
 			}
 			<br>
@@ -158,7 +158,7 @@
 			    top: 279px; <br>
 			    left: 355px; <br>
 			    z-index: 1; <br>
-			    -webkit-transform: rotate(11deg); <br>
+			    rotate(11deg); <br>
 			</div>
 			}
 			<br>
@@ -175,7 +175,7 @@
 			    top: 318px; <br>
 			    left: 68px; <br>
 			    z-index: 3; <br>
-			    -webkit-transform: rotate(-24deg); <br>
+			    rotate(-24deg); <br>
 			</div>
 			}
 			<br>
@@ -192,7 +192,7 @@
 			    top: 316px; <br>
 			    left: 62px; <br>
 			    z-index: 2; <br>
-			    -webkit-transform: rotate(-24deg); <br>
+			    rotate(-24deg); <br>
 			</div>
 			}
 			<br>
@@ -209,7 +209,7 @@
 			    top: 325px; <br>
 			    left: 55px; <br>
 			    z-index: 1; <br>
-			    -webkit-transform: rotate(-24deg); <br>
+			    rotate(-24deg); <br>
 			</div>
 			}
 			<br>
@@ -226,7 +226,7 @@
 			    top: 124px; <br>
 			    left: 418px; <br>
 			    z-index: 3; <br>
-			    -webkit-transform: rotate(-24deg); <br>
+			    rotate(-24deg); <br>
 			</div>
 			}
 			<br>
@@ -243,7 +243,7 @@
 			    top: 116px; <br>
 			    left: 421px; <br>
 			    z-index: 2; <br>
-			    -webkit-transform: rotate(-24deg); <br>
+			    rotate(-24deg); <br>
 			</div>
 			}
 			<br>
@@ -260,7 +260,7 @@
 			    top: 118px; <br>
 			    left: 430px; <br>
 			    z-index: 1; <br>
-			    -webkit-transform: rotate(-24deg); <br>
+			    rotate(-24deg); <br>
 			</div>
 			}
 			<br>
@@ -277,7 +277,7 @@
 			    top: 84px; <br>
 			    left: 153px; <br>
 			    z-index: 3; <br>
-			    -webkit-transform: rotate(57deg); <br>
+			    rotate(57deg); <br>
 			</div>
 			}
 			<br>
@@ -294,7 +294,7 @@
 			    top: 74px; <br>
 			    left: 147px; <br>
 			    z-index: 2; <br>
-			    -webkit-transform: rotate(57deg); <br>
+			    rotate(57deg); <br>
 			</div>
 			}
 			<br>
@@ -311,7 +311,7 @@
 			    top: 70px; <br>
 			    left: 145px; <br>
 			    z-index: 1; <br>
-			    -webkit-transform: rotate(57deg); <br>
+			    rotate(57deg); <br>
 			</div>
 			}
 			<br>
@@ -328,7 +328,7 @@
 			    top: 400px; <br>
 			    left: 328px; <br>
 			    z-index: 3; <br>
-			    -webkit-transform: rotate(57deg); <br>
+			    rotate(57deg); <br>
 			</div>
 			}
 			<br>
@@ -345,7 +345,7 @@
 			    top: 400px; <br>
 			    left: 327px; <br>
 			    z-index: 4; <br>
-			    -webkit-transform: rotate(57deg); <br>
+			    rotate(57deg); <br>
 			</div>
 			}
 			<br>
@@ -361,7 +361,7 @@
 			    top: 412px; <br>
 			    left: 335px; <br>
 			    z-index: 6; <br>
-			    -webkit-transform: rotate(60deg); <br>
+			    rotate(60deg); <br>
 			</div>
 			}
 		</div>
